[UPDATE] Changed version name, changed target packages names

--- a/mobdrink-core/pom.xml
+++ b/mobdrink-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.zamponimarco</groupId>
         <artifactId>mobdrink</artifactId>
-        <version>0.1</version>
+        <version>transition</version>
     </parent>
     <artifactId>mobdrink-core</artifactId>
     <properties>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.github.zamponimarco</groupId>
             <artifactId>cubescocktail-dist</artifactId>
-            <version>0.1</version>
+            <version>transition</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
