--- a/mobdrink-dist/pom.xml
+++ b/mobdrink-dist/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.zamponimarco</groupId>
         <artifactId>mobdrink</artifactId>
-        <version>0.1</version>
+        <version>transition</version>
     </parent>
     <artifactId>mobdrink-dist</artifactId>
     <properties>
