[UPDATE] Bumped library versions, changed MobDrink version

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.zamponimarco</groupId>
     <artifactId>mobdrink</artifactId>
-    <version>transition</version>
+    <version>0.1</version>
     <modules>
         <module>mobdrink-core</module>
         <module>mobdrink-dist</module>
