--- a/mobdrink-core/pom.xml
+++ b/mobdrink-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.zamponimarco</groupId>
         <artifactId>mobdrink</artifactId>
-        <version>transition</version>
+        <version>0.1</version>
     </parent>
     <artifactId>mobdrink-core</artifactId>
     <properties>
@@ -45,24 +45,28 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
+            <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.16.5-R0.1-SNAPSHOT</version>
+            <version>1.18.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.zamponimarco</groupId>
             <artifactId>cubescocktail-dist</artifactId>
-            <version>transition</version>
+            <version>0.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
